Enhance segmentation module with advanced methods for 3D SEM data
- Added traditional segmentation methods: region growing, graph cuts, active contours, SLIC, Felzenszwalb, and random walker.
- Implemented deep learning segmentation methods: 2D U-Net, 3D U-Net, V-Net, Attention U-Net, and nnU-Net.
- Updated requirements.txt to include TensorFlow and PyMaxflow as optional dependencies.
- Created SEGMENTATION_GUIDE.md to document usage, configuration, and best practices for segmentation methods.

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,15 @@ Pillow>=9.0.0
 mclahe @ https://github.com/VincentStimper/mclahe/archive/numpy.zip
 zarr
 s3fs
+
+# Deep Learning Dependencies (optional)
+tensorflow>=2.8.0
+# tensorflow-gpu>=2.8.0  # Uncomment for GPU support
+
+# Advanced Segmentation Dependencies (optional)
+PyMaxflow>=1.2.13  # For graph cuts segmentation
+nnunet  # For nnU-Net (requires separate installation)
+
+# GUI Dependencies
+matplotlib>=3.5.0
+tkinter  # Usually included with Python
