Enhance SEMSEG documentation and installation process
- Updated README.md with quick start guide and detailed usage instructions for GUI, CLI, web interface, and Python script.
- Added HOW_TO_RUN.md for comprehensive running methods and examples.
- Created INSTALLATION.md detailing installation steps, dependencies, and verification.
- Introduced QUICK_REFERENCE.md for a concise overview of commands and methods.
- Improved requirements.txt to clarify optional dependencies and their installation.
- Refined main_pipeline.py to streamline segmentation methods and remove unnecessary comments.
- Added quick_start.py for a demonstration of SEMSEG capabilities with synthetic data.
- Implemented verify_installation.py to check installation integrity and core functionality.
- Established pyproject.toml for modern package management and dependency handling.
- Enhanced setup.py for better installation experience and package metadata.

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,8 @@ tensorflow>=2.8.0
 
 # Advanced Segmentation Dependencies (optional)
 PyMaxflow>=1.2.13  # For graph cuts segmentation
-nnunet  # For nnU-Net (requires separate installation)
+# nnunet  # For nnU-Net (requires separate installation and Python <3.12)
 
 # GUI Dependencies
 matplotlib>=3.5.0
-tkinter  # Usually included with Python
+# tkinter is included with Python standard library
