Update .gitignore to include results directory and Snyk AI rules instructions

--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,5 @@ temp/
 *.raw
 data/
 results/
+# Snyk Security Extension - AI Rules (auto-generated)
+.github/instructions/snyk_rules.instructions.md
